--- a/product.liquid
+++ b/product.liquid
@@ -11,7 +11,7 @@
     {% endunless %}
 
     <div class="cell-8">
-      {% include "product_info" %}
+      {% include "product_form" %}
     </div>
     <div class="cell-12">
       {% include "product_tabs" %}
